# notebooks

lang/python/: pyproject.toml
lang/r/: .Rprofile  renv.R
