[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Shun Asai <shun.asai@tmkc.co.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
Scrapy = "^2.6.1"
pydantic = "^1.9.1"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
ipywidgets = "^7.7.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.4"
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
exclude = '''
(
    .venv
    | .mypy_cache
    | .pytest_cache
    | .tox
)
'''

[tool.isort]
line_length = 100
